<resources>
    <string name="app_name">CASIO MS-8L</string>
    <string name="percent">%</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="dot">.</string>
    <string name="zero">0</string>
    <string name="dispzero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="equal">=</string>
    <string name="ac">AC</string>
    <string name="c">C</string>
    <string name="casio">CASIO</string>
    <string name="electronic_calculator">Electronic Calculator</string>
    <string name="mplus">M+</string>
    <string name="mminus">M-</string>
    <string name="mrc">MRC</string>
    <string name="ms_8l">MS - 8L</string>
    <string name="divide">÷</string>
    <string name="sqrt">√</string>
    <string name="mult">x</string>
</resources>
